fix: align action header text to the right

--- a/code/src/components/tables/Table.module.css
+++ b/code/src/components/tables/Table.module.css
@@ -44,10 +44,11 @@
   gap: 8px;
   align-items: center;
   justify-content: center;
+  justify-self: end;
 }
 
 .actionHeader {
-  text-align: center !important;
+  text-align: right !important;
 }
 
 .actionButton {
